<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyReceipt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choice_prompt">Choose graph type</string>
    <string name="year_prompt">Choose a year</string>
	<string name="date">Date</string>
	<string name="store">Store</string>
	<string name="amount">Amount</string>
	<string name="receipt">Receipt</string>
	<string name="storehint">enter store name</string>
	<string name="update">Update</string>
	<string name="delete">Delete</string>
	<string name="pdf">PDF</string>
	<string name="totalexp">Total Expenditure: 0.00</string>
	<string name="receiptview">Receipt view</string>
	<string name="calendar">calendar</string>
	<string name="graph">graph</string>
	<string name="camera">camera</string>
	<string name="view">receipt view</string>
	<string name="report">report view</string>
	<string name="ShowGraph">Show Graph</string>
	
    
    
    
    <string-array name="grapy_type_array">
        <item>Monthly</item>
        <item>Yearly</item>
        
    </string-array>
</resources>