<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ccf2f0"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/store" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginBottom="27dp"
        android:text="@string/totalexp" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:gravity="right"
        android:text="@string/date" />

    <Button
        android:id="@+id/butPdf"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotal"
        android:layout_alignBottom="@+id/tvTotal"
        android:layout_alignLeft="@+id/textView1"
        android:background="@drawable/pdf"
        android:text="@string/pdf"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butPdf"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" 
        android:background="@android:color/transparent"
		android:cacheColorHint="@android:color/transparent">

    </ListView>

</RelativeLayout>