<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccf2f0"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinnerYearList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butSubmit"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:prompt="@string/year_prompt" />

    <Button
        android:id="@+id/butSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ShowGraph" />

    <Spinner
        android:id="@+id/spinnerChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerYearList"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:prompt="@string/choice_prompt" />

</RelativeLayout>